feat: :sparkles: Add about me section

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -7,7 +7,7 @@
     margin: 0 auto;
     text-align: center;
     color: var(--black-1);
-    padding: 0 1rem;
+    padding: 10rem 1rem 0 1rem;
 }
 
 .hero__content {
