--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,12 +1,29 @@
 .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    max-width: 1200px;
-    height: 6.25rem;
-    margin: 0 auto;
-    padding: 0 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 6.25rem;
+  max-width: 1200px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 20px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 999;
+  background-color: white;
+}
 
+.header::before {
+  content: "";
+  width: 100vw;
+  height: 100px;
+  box-shadow: 0 8px 24px #e4e4e4;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: -1;
 }
 .header__logo {
     display: flex;
